Fine refinements of docs and integrating uml figures.

--- a/docs/1. Funkcionális specifikáció.MD
+++ b/docs/1. Funkcionális specifikáció.MD
@@ -33,8 +33,8 @@ A rendszernek a következő funkciókat kell ellátnia:
 - látogatók tudnak szűrni kategóriák szerint
 - látogatók tudnak keresni receptnév alapján (kliensoldali szűrés)
 - látogatók a regisztrációs felületre navigálhatnak
-- regisztrált felhasználók tudnak regisztrálni és bejelentkezni (Spring Security)
-- regisztrált felhasználók tudnak új receptet létrehozni (név, kategória, idők, leírás, hozzávalók, kép)
+- regisztrált felhasználók tudnak bejelentkezni és kilépni (Spring Security)
+- regisztrált felhasználók tudnak új receptet létrehozni (név, kategória, idők, leírás, hozzávalók)
 - regisztrált felhasználók tudják a saját receptjeiket szerkeszteni
 - regisztrált felhasználók tudják a saját receptjeiket törölni
 - regisztrált felhasználók meg tudják nyitni a Profil oldalt a saját receptjeik kezeléséhez
@@ -44,7 +44,8 @@ A rendszernek a következő funkciókat kell ellátnia:
 - A regisztrált felhasználóknak a rendszer használatához azonosítás szükséges. A bejelentkezés a backend `/login` végpontján történik, a munkamenetet JSESSIONID süti biztosítja.
 - A receptfeltöltéshez és a saját receptek módosításához bejelentkezés szükséges.
 
-*[USE CASE DIAGRAM HELYE]*
+![PlantUML model](http://www.plantuml.com/plantuml/png/5SsnjSCW34RX_atnCe1HdyfBP01P_3QSWE18ucJzECszvRTxiCNgxUzHLThAMDR-IyJq9v7n9rqroZgMmsHeG2F9w7H01NVUW_YScq7gnEQ5hUf5XjEfWBDJvwgKXpYzd3TXHve_ReVc-ry0)
+
 
 ## 3. Megfeleltetés, hogyan fedik le a használati esetek a követelményeket
 
@@ -62,8 +63,8 @@ A rendszernek a következő funkciókat kell ellátnia:
 A képernyőtervek a megvalósult Blazor komponenseket tükrözik. A korábbi statikus HTML tervek helyett a felület MudBlazor elemekből épül fel, biztosítva a dinamikus adatkezelést és interaktivitást.
 
 ### Főbb oldalak:
-
-- **Home.razor (Kezdőlap)**: A belépési pont minden felhasználó számára. Tartalmazza a receptkártyák listáját, a név szerinti keresőmezőt és a kategóriaszűrő komponenst. Bejelentkezett felhasználók számára itt jelenik meg az "Add New Recipe" gomb.
+- Az oldalak fölött fix, reszponzív navigációs sávban érhetőek el a menüpontok.
+- **Home.razor (Kezdőlap)**: A belépési pont minden felhasználó számára. Tartalmazza a receptkártyák listáját, a név szerinti keresőmező és a kategóriaszűrő komponens erre az oldalra implementált.
 - **Recipe.razor (Recept részletek)**: Egy adott recept részletes nézete (`/Recipe/{RecipeId}`): megjeleníti a recept nevét, képét, az elkészítési időket, a hozzávalók táblázatos listáját és a számozott elkészítési lépéseket.
 - **Account.razor**: A bejelentkezés kezelésére szolgáló oldal. Ellenőrzi az autentikációt; amennyiben a felhasználó nincs bejelentkezve, átirányítja a backend Spring Security `/login` felületére.
 - **Profil.razor**: A bejelentkezett felhasználó személyes oldala. Itt található a "My recipes" fül, amely listázza a felhasználó saját receptjeit, lehetőséget adva azok megtekintésére ("Details"), szerkesztésére ("Edit") vagy törlésére ("Delete").
@@ -74,11 +75,11 @@ A **Kezdőlap (Látogatói forgatókönyv)** során a látogató megnyitja az al
 
 A **Recept részleteinek megtekintése** során a felhasználó egy receptkártyára kattint, mire a rendszer a `/Recipe/{id}` oldalra navigál. Itt betöltődnek a recept részletes adatai: leírás, hozzávalók listája és az elkészítés lépései.
 
-A **Bejelentkezés folyamata**: A felhasználó az "Account" menüpontra kattint. A rendszer ellenőrzi a JSESSIONID sütit. Ha hiányzik, a felhasználót a Spring Security bejelentkezési űrlapjára irányítja. Sikeres belépés után a frontend autentikáltnak tekinti a felhasználót.
+A **Bejelentkezés folyamata**: A felhasználó az "Account" menüpontra kattint. A lenyíló menüben az autentikált állapotnak megfelelő menüpontok láthatóak a felhasználó számára. Látogatónak a Register és Login elérhető. A Register frontend oldali formot küld a backendnek a kötelező adatok hitelesítésére és ellenőrzésére. A Login opciót választva a rendszer ellenőrzi a JSESSIONID sütit. Ha hiányzik, a felhasználót a Spring Security bejelentkezési űrlapjára irányítja. Sikeres belépés után a frontend autentikáltnak tekinti a felhasználót.
 
 ### Regisztrált felhasználóként végezhető műveletek:
 
-- **Új recept létrehozása**: A felhasználó az "Add New Recipe" gombra kattint. A megjelenő űrlapon (MudDialog) kiválasztja a kategóriát és az alapanyagokat a rendszer által kínált listából, megadja a mennyiségeket és leírja a lépéseket. Mentéskor a kliens összefűzi az adatokat és elküldi a `/recipe` POST végpontra. Siker esetén a lista frissül.
+- **Új recept létrehozása**: A felhasználó az "Account" menüpontra kattintva elérheti az "Add New Recipe" gombot. Arra kattintva a megjelenő űrlapon (MudDialog) kiválasztja a kategóriát és az alapanyagokat a rendszer által kínált listából, megadja a mennyiségeket és leírja a lépéseket. Mentéskor a kliens összefűzi az adatokat és elküldi a `/recipe` POST végpontra. Siker esetén a lista frissül.
 - **Recept szerkesztése**: A felhasználó a saját receptjének menüjéből az "Edit" opciót választja. Az űrlap betölti a recept aktuális adatait, amelyeket a felhasználó módosíthat. Mentéskor a rendszer frissíti a receptet.
 - **Recept törlése**: A felhasználó a "Delete" opciót választja. Egy megerősítő ablak jóváhagyása után a rendszer törli a receptet a `/recipe/{id}` DELETE végponton keresztül.
 - **Profil kezelése**: A Profil menüpont alatt a rendszer betölti az aktuális felhasználó adatait (`/user`) és listázza a saját feltöltött receptjeit ("My recipes"), ahol a fenti szerkesztési és törlési műveletek szintén elérhetők.
