--- a/docs/1. Rendszerterv dokumentáció.MD
+++ b/docs/1. Rendszerterv dokumentáció.MD
@@ -61,14 +61,17 @@ A csapat tagjai közösen felelősek a termékért, a prioritások meghatározá
 **Frontend**
 - **Deák Dániel**
     - Blazor projektváz kialakítása
-    - fő komponensek implementálása (Home, Recipe, Profil, Account, AddRecipe dialógus, CategoryFilter)
+    - fő komponensek implementálása (Home, Recipe, Account, AddRecipe, EditRecipe, Register dialógus)
     - backend API-k integrálása
+    - kézi, exploratív tesztelés támogatása
 - **Benkő Bence**
     - UI/UX tervezés Figma-ban
-    - DDT tesztesetek készítése a frontendre
+    - manuális teszt készítése a frontendre
+    - bugfixek
+    - fő komponens implementálása (Profil)
     - felhasználói élmény finomhangolása
 - **Csajbók-Reményi Korinna**
-    - DDT tesztek tervezése és futtatása
+    - frontend funkciók, mellékkomponensek implementálása (CategoryFilter, Searchbar, Responsive Navbar)
     - kézi, exploratív tesztelés támogatása
 
 **Adatbázis és infrastruktúra**
@@ -77,10 +80,11 @@ A csapat tagjai közösen felelősek a termékért, a prioritások meghatározá
     - GitHub repository létrehozása és karbantartása
 
 **Dokumentáció és tesztelés (összefoglaló)**
-- Dokumentáció (funkcionális specifikáció, rendszerterv): Németh Dávid
+- Dokumentáció (funkcionális specifikáció, rendszerterv): teljes fejlesztői csapat
 - BDD tesztek: Pataricza György
-- Frontend DDT tesztek: Benkő Bence, Csajbók-Reményi Korinna
-- Rendszer- és integrációs tesztek: Deák Dániel
+- Unit és MockMvc alapú controller tesztek: Németh Dávid
+- Frontend tesztek: Benkő Bence, Csajbók-Reményi Korinna, Deák Dániel
+- Rendszer- és integrációs tesztek: teljes csapat
 - Explorációs manuális tesztelés: teljes csapat
 
 ### 2.3 Ütemterv
@@ -331,6 +335,25 @@ flowchart LR
 flowchart LR
     classDef startstop fill:#1E90FF,stroke:#87CEFA,color:#fff,font-weight:bold;
     classDef action fill:#2E8B57,stroke:#98FB98,color:#fff;
+    classDef decision fill:#DAA520,stroke:#FFD700,color:#000,font-weight:bold;
+    classDef error fill:#B22222,stroke:#FF7F7F,color:#fff;
+
+    subgraph "Recept módosítása folyamat"
+        direction LR
+        A((Start)):::startstop --> B["Bejelentkezés"]:::action
+        B --> C["Edit recipe űrlap megnyitása"]:::action
+        C --> D["Adatok kitöltése"]:::action
+        D --> E{"Adatok érvényesek?"}:::decision
+        E -->|Nem| D:::error
+        E -->|Igen| F["Recept mentése (POST /recipe)"]:::action
+        F --> H((Stop)):::startstop
+    end
+``` 
+
+```mermaid 
+flowchart LR
+    classDef startstop fill:#1E90FF,stroke:#87CEFA,color:#fff,font-weight:bold;
+    classDef action fill:#2E8B57,stroke:#98FB98,color:#fff;
 
     subgraph "Recept törlése folyamat"
         direction LR
@@ -395,6 +418,8 @@ A backend határfelülete a REST API végpontok halmaza:
 - `/category` – kategóriák listázása
 - `/material` – alapanyagok listázása
 
+![PlantUML model](http://www.plantuml.com/plantuml/png/5Sqz3i8m343XdLF00HhlJ1M8WxYEsqGaJkGVSNtQvRtnMyrHFNgxFQfGYyoXxLxSfpq157_fg5vY2sEb8SxYYKQ7ZONup7S0xdDHfZfviO9QvG3btQ0mPeEELI0FCdYzFsbUqigIp_y1)
+
 ---
 
 ### 5.4 Menühierarchiák
@@ -403,8 +428,9 @@ A backend határfelülete a REST API végpontok halmaza:
 
 - Home
 - Categories
-- Register
-- Login
+- Account (legördülő menü)
+    - Register
+    - Login
 
 **Bejelentkezett felhasználóként:**
 
@@ -415,6 +441,8 @@ A backend határfelülete a REST API végpontok halmaza:
     - Profile
     - Logout
 
+Mobilnézetben egységesen drawer menüben jelennek meg a menüpontok bejelentkezettségnek megfelelően.
+
 ---
 
 ### 5.5 Képernyőtervek
@@ -423,7 +451,7 @@ A képernyőtervek Figma szoftverrel készültek.
 A frontend a backend API-khoz illeszkedik, a tényleges implementáció Blazor + MudBlazor komponensekre épül.
 
 - **Home:** kártyás receptlista, keresősáv, kategóriaszűrő
-- **Recipe details:** kép, leírás, hozzávalók, elkészítési mód
+- **Recipe details:** kép, leírás, hozzávalók, előkészítési idő, elkészítési idő, adag, hozzávalók, elkészítés lépései, tápértékek
 - **Profil:** felhasználói adatok és „My recipes” lista
 
 ---
@@ -518,56 +546,6 @@ Kliens (Blazor WebAssembly) <---- HTTP/JSON ----> Spring Boot REST API <----> My
 
 ### 9.1 Egyedek (entitások)
 
-**User (RecipeUser) egyedet jellemzi:**
-
-- id
-- name
-- userName
-- passwordEncoded
-- email
-- profileImageRef
-
-**Recept (Recipe) egyedet jellemzi:**
-
-- id
-- user_id (külső kulcs RecipeUser-re)
-- category_id (külső kulcs Category-ra)
-- name
-- imageRef
-- prepTime
-- cookTime
-- portion
-- description
-- instructions (szöveges elkészítési leírás)
-
-**Hozzávaló (Ingredient) egyedet jellemzi:**
-
-- id
-- recipe_id (FK Recipe)
-- material_id (FK Material)
-- amount (mennyiség)
-
-**Alapanyag (Material) egyedet jellemzi:**
-
-- id
-- name
-- calories
-- protein
-- carbohydrate
-- fat
-- unitOfMeasure
-
-**Kategória (Category) egyedet jellemzi:**
-
-- id
-- name
-
-> *Megjegyzés:* Komment és Kedvencek táblák **nem** részei a megvalósított adatmodellnek.
-
-## 9. Adatbázisterv
-
-### 9.1 Egyedek (entitások)
-
 **Felhasználó (RecipeUser) egyedet jellemzi:**
 - `id` (PK)
 - `name`
@@ -608,7 +586,94 @@ Kliens (Blazor WebAssembly) <---- HTTP/JSON ----> Spring Boot REST API <----> My
 - `amount`
 
 ### 9.2 Logikai adatmodell (ER diagram)
+#### E-R diagram:
+```mermaid
+flowchart LR
+    RECIPE_USER[RECIPE_USER]
+    CATEGORY[CATEGORY]
+    RECIPE[RECIPE]
+    MATERIAL[MATERIAL]
+    INGREDIENT[INGREDIENT]
 
+    uid(["<u>id</u>"])
+    uname(["name"])
+    uusername(["userName"])
+    upass(["passwordEncoded"])
+    uemail(["email"])
+    upic(["profileImageRef"])
+
+    RECIPE_USER --- uid
+    RECIPE_USER --- uname
+    RECIPE_USER --- uusername
+    RECIPE_USER --- upass
+    RECIPE_USER --- uemail
+    RECIPE_USER --- upic
+
+    cid(["<u>id</u>"])
+    cname(["name"])
+    CATEGORY --- cid
+    CATEGORY --- cname
+
+    rid(["<u>id</u>"])
+    ruser(["user_id"])
+    rcat(["category_id"])
+    rname(["name"])
+    rimg(["imageRef"])
+    rprep(["prepTime"])
+    rcook(["cookTime"])
+    rportion(["portion"])
+    rdesc(["description"])
+    rinstr(["instructions"])
+
+    RECIPE --- rid
+    RECIPE --- ruser
+    RECIPE --- rcat
+    RECIPE --- rname
+    RECIPE --- rimg
+    RECIPE --- rprep
+    RECIPE --- rcook
+    RECIPE --- rportion
+    RECIPE --- rdesc
+    RECIPE --- rinstr
+
+    mid(["<u>id</u>"])
+    mname(["name"])
+    mcal(["calories"])
+    mprot(["protein"])
+    mcarb(["carbohydrate"])
+    mfat(["fat"])
+    munit(["unitOfMeasure"])
+
+    MATERIAL --- mid
+    MATERIAL --- mname
+    MATERIAL --- mcal
+    MATERIAL --- mprot
+    MATERIAL --- mcarb
+    MATERIAL --- mfat
+    MATERIAL --- munit
+
+    iid(["<u>id</u>"])
+    irecipe(["recipe_id"])
+    imaterial(["material_id"])
+    iamount(["amount"])
+
+    INGREDIENT --- iid
+    INGREDIENT --- irecipe
+    INGREDIENT --- imaterial
+    INGREDIENT --- iamount
+
+    R_WRITES{"írja"}
+    R_CLASS{"besorolva"}
+    R_CONTAINS{"tartalmaz"}
+    R_USES{"használ"}
+
+    RECIPE_USER --- R_WRITES --- RECIPE
+    RECIPE --- R_CONTAINS --- INGREDIENT
+    RECIPE --- R_CLASS --- CATEGORY
+    INGREDIENT --- R_USES --- MATERIAL
+```
+---
+#### Adatbázis séma:
 ```mermaid
 erDiagram
     RECIPE_USER ||--o{ RECIPE : "írja"
@@ -725,7 +790,7 @@ CREATE TABLE ingredient (
 
 **Kliens oldal (Blazor WebAssembly):**
 - **Oldalak:** `Home`, `Recipe`, `Profil`, `Account`
-- **Komponensek:** `NavMenu`, `AccountNavMenu`, `CategoryFilter`, `AddRecipeDialog`, `EditRecipeDialog`
+- **Komponensek:** `NavMenu`, `AccountNavMenu`, `CategoryFilter`, `AddRecipeDialog`, `EditRecipeDialog`, `RegisterRecipeDialog`
 - **Állapotkezelés:** Keresési és szűrési állapotok kezelése
 - **Kommunikáció:** HTTP kliens a backend REST API hívásához
 
@@ -736,8 +801,8 @@ CREATE TABLE ingredient (
 ### 11.1 Tesztelési felelősök
 - **Backend BDD tesztek (Cucumber):** Pataricza György
 - **Backend unit és controller tesztek (JUnit, MockMvc):** Németh Dávid
-- **Frontend DDT tesztek:** Benkő Bence, Csajbók-Reményi Korinna
-- **Manuális rendszer- és integrációs tesztek:** Deák Dániel
+- **Frontend tesztek:** Benkő Bence, Csajbók-Reményi Korinna, Deák Dániel
+- **Manuális rendszer- és integrációs tesztek:** Teljes csapat
 - **Explorációs manuális tesztelés:** Teljes csapat
 
 ### 11.2 Tesztelt üzleti folyamatok (regisztrált felhasználó)
